--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ article {
   padding: 15px;
   display: flex;
   justify-content: center;
-  transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out !important;
 }
 .download-btn:hover {
   color: #0c0318;
@@ -222,6 +222,16 @@ article {
   font-weight: 600;
   position: relative;
 }
+.about-con{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  margin: 20px auto;
+  width: 90%;
+  color: white;
+}
 
 .about h1::after {
   content: "";
@@ -247,6 +257,7 @@ article {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  margin-bottom: 10px;
   gap: 15px;
   margin-top: 40px;
 }
@@ -374,7 +385,7 @@ article {
 .soft,
 .hard {
   width: 200px;
-  height: 150px;
+  height: 200px;
   border-radius: 10px;
   transition: all 0.4s ease-in-out;
   opacity: 0.6;
@@ -772,7 +783,7 @@ article {
   gap: 30px;
 }
 
-.card-back h4{
+.card-back h4 {
   margin: 0 0 20px;
   font-size: 0.95rem;
   font-weight: 400;
@@ -806,7 +817,80 @@ article {
   filter: drop-shadow(1px 1px 10px #bfaad0);
   cursor: none;
 }
+/*clubs*/
+.clubs {
+  padding: 40px 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  position: relative;
+  margin-bottom: 100px;
+}
+.clubs h2 {
+  font-size: 2.5rem;
+  margin-bottom: 40px;
+  position: relative;
+}
+.clubs h2::after {
+  content: "";
+  display: block;
+  width: 80px;
+  height: 3px;
+  background: #a78abf;
+  margin: 10px auto 0;
+  border-radius: 2px;
+}
 
+.gradient {
+  position: relative;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+.clublogo {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  transform: translateY(-20%);
+}
+.clubBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  h1 {
+    color: #bfaad0;
+    font-size: 1.5rem;
+    margin: 20px 0;
+  }
+  p {
+    font-size: 1.2rem;
+    margin: 0;
+    text-align: center;
+  }
+  h3 {
+    font-size: 1.1rem;
+    margin-top: 30px;
+    margin-bottom: 0;
+  }
+}
+/*footer*/
+footer {
+  width: 100%;
+  height: 100px;
+  background-color: #0f031790;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #bfaad0;
+  font-size: 0.8rem;
+  margin-bottom: 0;
+  position: relative;
+}
 
 /*tablet and phone*/
 
@@ -815,7 +899,6 @@ article {
     align-items: center;
     text-align: center;
   }
-
 
   .intro {
     flex-direction: column;
@@ -866,7 +949,7 @@ article {
     margin: 30px auto;
     text-align: center;
   }
-    .cert-grid {
+  .cert-grid {
     flex-direction: column;
     align-items: center;
   }
