--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@ html, body {
   box-sizing: inherit;
 }
 
+body > * {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
 
 body {
   color: white;
@@ -58,6 +62,8 @@ header {
   background-color: transparent;
   transition: background-color 0.3s ease;
   z-index: 1000;
+  overflow: hidden;
+  overflow-y: hidden;
 }
 
 header.scrolled {
