--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
   margin: 0;
   padding: 0;
   width: 100%;
@@ -12,11 +13,6 @@ html, body {
   box-sizing: inherit;
 }
 
-body > * {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
 body {
   color: white;
   background: linear-gradient(#0c0318, #281537, #0c0318);
@@ -27,28 +23,28 @@ body {
   margin: 0;
   padding: 0;
   top: 0;
-
 }
-a{
+a {
   text-decoration: solid;
- 
 }
-  #magic-glow {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 300px;
-    height: 300px;
-    border-radius: 50%;
-    pointer-events: none;
-    background: radial-gradient(circle, rgba(167, 138, 191, 0.4), transparent 70%);
-    filter: blur(40px);
-    transform: translate(-50%, -50%);
-    z-index: 0;
-    mix-blend-mode: lighten; /* Optional: makes it glow-like */
-  }
-
-
+#magic-glow {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+  pointer-events: none;
+  background: radial-gradient(
+    circle,
+    rgba(167, 138, 191, 0.4),
+    transparent 70%
+  );
+  filter: blur(40px);
+  transform: translate(-50%, -50%);
+  z-index: 0;
+  mix-blend-mode: lighten; /* Optional: makes it glow-like */
+}
 
 /*header*/
 header {
@@ -111,7 +107,7 @@ article {
   justify-content: center;
   align-items: center;
 }
-.text{
+.text {
   padding: 15px;
 }
 .avatar {
@@ -136,8 +132,7 @@ article {
   transform: translateY(-40px);
 }
 
-
-.start{
+.start {
   font-size: 1.8rem;
   margin: 10px 0;
   text-wrap: wrap;
@@ -149,7 +144,6 @@ article {
   margin-top: 0;
   padding-top: 0;
 }
-
 
 .intro h3 {
   display: inline-block;
@@ -430,7 +424,9 @@ article {
   gap: 5px;
   box-shadow: 0 0 2px #281537, 0 0 2px #a78abf;
 }
-.soft, .hard, .cert {
+.soft,
+.hard,
+.cert {
   backface-visibility: hidden;
   transform-style: preserve-3d;
   will-change: transform;
@@ -485,7 +481,7 @@ article {
   color: #c7b9d3;
   padding: 1px;
   margin: 0;
-  text-decoration:underline !important;
+  text-decoration: underline !important;
 }
 .hard:hover .card-front,
 .hard:active .card-front,
@@ -858,7 +854,6 @@ article {
 }
 .cert-btn:hover {
   transform: scale(0.99);
-
 }
 /*clubs*/
 .clubs {
@@ -1028,5 +1023,4 @@ footer {
     left: 0;
     text-align: left;
   }
-
 }
